# My-NBodySim

./: CMakeLists.txt  README.md
include/glad/: glad.h
scenes/: dataSet.txt  dataSet1.txt  generate_data.py  scene_1.txt  scene_3.txt
src/: config.cpp  config.hpp  glad.c  main.cpp
src/components/: camera_component.hpp  ligth_component.hpp  particle_component.hpp  physics_component.hpp  render_component.hpp  transform_component.hpp
src/controller/: app.cpp  app.hpp
src/imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_tables.cpp  imgui_widgets.cpp
src/kernels/: kPhysic_Kernel.cl  kVelocityStep.cl
src/particleData/: scene_1.txt
src/shaders/: sphere.frag  sphere.vert  standar.frag
src/systems/: camera_system.cpp  camera_system.hpp  motion_system.cpp  motion_system.hpp  render_system.cpp  render_system.hpp
src/view/: shader.cpp  shader.hpp
